# softdoc

./: .gitignore  AUTHORS  CODING_STANDARDS  Makefile  Makefile.am  Makefile.in  README  README.md  autogen.sh  configure  configure.ac  ncurseshelloworld.cpp
include/: build_panel.h  config.h.in  game.h  map.h  menu.h  panel.h  pathfind.h  player.h  unit.h  unit_type.h
src/: Makefile.am  Makefile.in  build_panel.cpp  game.cpp  main.cpp  map.cpp  menu.cpp  panel.cpp  pathfind.cpp  player.cpp  unit.cpp  unit_type.cpp
